Изменение способа установка статуса indexed для сайта

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ spring:
     show-sql: false
     hibernate.ddl-auto: none
 
+
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
     enabled: true
@@ -23,14 +24,16 @@ spring:
 
 indexing-settings:
   sites:
-    - url: https://volochek.life/
-      name: volochek.life
-    - url: https://ruweb.net
-      name: RuWeb.ru
+#    - url: https://volochek.life/
+#      name: volochek.life
+#    - url: https://ruweb.net
+#      name: RuWeb.ru
 #    - url: https://www.svetlovka.ru
 #      name: Svetlovka
-    - url: https://www.playback.ru
+    - url: https://www.playback.ru/
       name: PlayBack.Ru
+#    - url:  https://sendel.ru/
+#      name:  sendel
   user-agent: HeliontSearchBot
   referrer: http://www.google.com
   request-delay: 1000
